Version 2.0.0.0
==========================================
- Added AwaitableQueryDispatcher
- Dropped support for Silverligt and Windows Phone 7
- Changed minimum .Net Framework Version to 4.5

Version 1.2.2.0
==========================================
- Added "SubChannelIdList" property to "ChannelDeletedEventArgs". This allows to get the IDs of deleted sub-channels.

Version 1.2.1.0
==========================================
- Fixed client query detection
- Added authentication to client query

Version 1.2.0.0
==========================================
- Added notification notifyserveredited
- Added notification notifychannelpasswordchanged
- Added notification notifychannelcreated
- Added notification notifychanneldeleted
- Added notification notifychannelmoved
- Added notification notifychanneledited
- Added notification notifychanneldescriptionchanged
- Added handler for unknown notifications
- Added command ServerGroupAutoDelPerm
- Added command ServerGroupAutoAddPerm
- Added command ClientGetUidFromClid
- Added SendCommandValidationPredicate property to QueryRunner, which allows controlling when a command is sent or not using a single function

Version 1.1.0.0
==========================================
- Fixed SynchronizationContext issues
- Fixed issue when a notification is between the body and statusline of a command response 
- improved speed

Version 1.0.5.0
==========================================
- Added ClientIP property to ClientListEntry
- Renamed Properties AntiFloodPointsNeededIPBan and AntiFloodPointsNeededCommandStop of ServerInfoResponse to AntiFloodPointsNeededIPBlock and AntiFloodPointsNeededCommandBlock
- Added new VirtualServerStatus "OtherInstance"
- Added Property OriginServerId to WhoAmIResponse
- Removed check for server name when creating a new server using QueryRunner.CreateServer (command servercreate wont need an virtualserver_name anymore, will use the template default name instead)