@@ -5,7 +5,7 @@
   <PropertyGroup>
     <RootDirectory>..</RootDirectory>
     <Config>Release</Config>
-    <ReleaseVersion>1.2.2.0</ReleaseVersion>
+    <ReleaseVersion>2.0.0.0</ReleaseVersion>
     <ReleaseVersionEscaped>$(ReleaseVersion.Replace(".", "_"))</ReleaseVersionEscaped>
     <ReleaseName>TS3QueryLib.Net.V$(ReleaseVersionEscaped)</ReleaseName>
     <ReleaseDirectory>Releases\$(ReleaseVersionEscaped)</ReleaseDirectory>
