@@ -1,0 +1,24 @@
+﻿using System;
+using System.Runtime.Serialization;
+
+namespace TS3QueryLib.Core.Common.Exceptions
+{
+    public class ParseException : Exception
+    {
+        public ParseException()
+        {
+        }
+
+        public ParseException(string message) : base(message)
+        {
+        }
+
+        public ParseException(string message, Exception innerException) : base(message, innerException)
+        {
+        }
+
+        protected ParseException(SerializationInfo info, StreamingContext context) : base(info, context)
+        {
+        }
+    }
+}
