@@ -3,6 +3,7 @@ Version 2.0.0.0
 - Added AwaitableQueryDispatcher
 - Dropped support for Silverligt and Windows Phone 7
 - Changed minimum .Net Framework Version to 4.5
+- Added more detailed exception in cases when there is a response parsing error
 
 Version 1.2.2.0
 ==========================================
